# task2

./: CMakeLists.txt  main.cpp
